--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
 
     <dimen name="activity_start_text_size">14sp</dimen>
     <dimen name="activity_start_divider_height">4dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
+    <!-- HilfsMargins. -->
+    <dimen name="activity_top_padding">40dp</dimen>
+    <dimen name="font_size">26sp</dimen>
 </resources>
