id:233 state:done comment: der Server-Service wurde komplett umgebaut. Jetzt nicht mehr binded, sondern unabhängiger von der activity. wird bisher zwar noch zerstört wenn ondestroy der activity aufgerufen wird, aber das kann verändert werden. falls service dann dauerhaft weiterläuft, muss button eingerichtet werden mit server beenden. außerdem sollte, solange server läuft, eine notifikation in der leiste oben angezeigt werden.

--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -24,4 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin_small"/>
 
+    <ListView
+        android:id="@+id/list_view_players"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
