Charakterklassen erstellt. Wiki umsortiert und eine RegelnActivity erstellt. #239 comment:klassn erstellt, noch sind alle leer

--- a/app/src/main/res/layout/content_rollen.xml
+++ b/app/src/main/res/layout/content_rollen.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.woodplantation.werwolf.activities.WikiActivity"
-    tools:showIn="@layout/activity_wiki">
+    tools:context="com.woodplantation.werwolf.Wiki.RollenActivity"
+    tools:showIn="@layout/activity_rollen">
 
     <LinearLayout
         android:id="@+id/base_layout_wiki"
