--- a/app/src/main/res/menu/menu_listfragment.xml
+++ b/app/src/main/res/menu/menu_listfragment.xml
@@ -2,7 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/item_wiki"
-        android:title="@string/wiki"
+        android:id="@+id/wiki_regeln"
+        android:title="@string/rules"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/wiki_rollen"
+        android:title="@string/roles"
         app:showAsAction="never" />
 </menu>
