--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -18,6 +18,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin_small"/>
 
+    <com.woodplantation.werwolf.graphics.MyTextView
+        android:id="@+id/text_view_group_port"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin_small"/>
+
     <ListView
         android:id="@+id/list_view_players"
         android:layout_width="match_parent"
