--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -67,6 +67,27 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin_small"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <com.woodplantation.werwolf.graphics.MyTextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.4"
+                android:text="@string/port" />
+
+            <com.woodplantation.werwolf.graphics.MyEditText
+                android:id="@+id/edit_text_join_lobby_port"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.6" />
+
+        </LinearLayout>
+
         <com.woodplantation.werwolf.graphics.MyButton
             android:id="@+id/button_join_lobby"
             android:layout_width="wrap_content"
