id:245, id:244, id:246, id:253 comment: playerliste wird auf server teilweise angezeigt.

--- a/app/src/main/res/layout/content_gamesettings.xml
+++ b/app/src/main/res/layout/content_gamesettings.xml
@@ -48,6 +48,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:digits="0123456789"
+                android:inputType="number"
                 android:layout_weight="0.6" />
 
         </LinearLayout>
